[package]
name = "xaudio-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.115"
serde = "1.0.115"
serde_json = "1.0.57"
reqwest = { version = "0.11.13", features = ["json", "stream"] }
tokio = { version = "1.23.1", features = ["full"] }
dotenv = "0.15.0"
pancurses = { version = "0.17.0", features = ["wide"] }
box_drawing = "0.1.2"
regex = "1"
